# wikipediacorpus-python

./: .gitignore  README.md  pyproject.toml
src/wikipediacorpus/: __init__.py  _http.py  _rate_limiter.py  exceptions.py  models.py
src/wikipediacorpus/api/: __init__.py  _article.py  _category.py  _links.py  _matrix.py  _redirects.py  _templates.py
src/wikipediacorpus/processing/: __init__.py  _link_matrix.py  _plot.py  _redirects.py  _text.py
tests/: conftest.py  test_http.py  test_models.py
tests/fixtures/: api_error.json  article_empty_extract.json  article_ratio_truncated.json  article_response.json  article_truncated.json  category_continue.json  category_members.json  links_incoming.json  links_incoming_continue.json  links_outgoing.json  links_outgoing_continue.json  missing_page.json  page_categories.json  redirect_destination.json  redirects.json  redirects_normalized.json  templates.json  templates_continue.json
tests/test_api/: test_article.py  test_category.py  test_links.py  test_matrix.py  test_redirects.py  test_templates.py
tests/test_processing/: test_link_matrix.py  test_plot.py  test_redirects.py  test_text.py
